--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -278,11 +278,12 @@
                     <option>Hyatt</option>
                     <option>Intercontinental</option>
                     <option>JW Marriott</option>
+                      <option>The Langham</option>
                     <option>Le Meredian</option>
                     <option>Mandarin Oriental</option>
                     <option>Marriott</option>
                     <option>Melia</option>
-                    <option>Radisson Blu</option>
+                    <option>The Peninsula</option>
                     <option>Renaissance</option>
                     <option>Ritz Carlton</option>
                     <option>Shangri-La</option>
@@ -583,7 +584,7 @@
 
 
  <div class="col-md-2 col-xs-12 col-sm-3 col_div">
-<%brandname = [['Any','Any'],['Boscolo','Boscolo'],['Fairmont','Fairmont'],['Four Seasons','Four Seasons'],['Hilton','Hilton'],['Hyatt','Hyatt'],['Intercontinental','Intercontinental'],['JW Marriott','JW Marriott'],['Le Meredian','Le Meredian'],['Mandarin Oriental','Mandarin Oriental'],['Marriott','Marriott'],['Melia','Melia'],['Radisson Blu','Radisson Blu'],['Renaissance','Renaissance'],['Ritz Carlton','Ritz Carlton'],['Shangri-La','Shangri-La'],['Sofitel','Sofitel'],['St. Regis','St. Regis'],['Starwood Luxury Collection','Starwood Luxury Collection'],['W Hotels','W Hotels'],['Waldorf Astoria','Waldorf Astoria'],['Westin','Westin']]%>
+<%brandname = [['Any','Any'],['Boscolo','Boscolo'],['Fairmont','Fairmont'],['Four Seasons','Four Seasons'],['Hilton','Hilton'],['Hyatt','Hyatt'],['Intercontinental','Intercontinental'],['JW Marriott','JW Marriott'],['Le Meredian','Le Meredian'],['Mandarin Oriental','Mandarin Oriental'],['Marriott','Marriott'],['Melia','Melia'],['The Peninsula','The Peninsula'],['The Langham','The Langham'],['Radisson Blu','Radisson Blu'],['Renaissance','Renaissance'],['Ritz Carlton','Ritz Carlton'],['Shangri-La','Shangri-La'],['Sofitel','Sofitel'],['St. Regis','St. Regis'],['Starwood Luxury Collection','Starwood Luxury Collection'],['W Hotels','W Hotels'],['Waldorf Astoria','Waldorf Astoria'],['Westin','Westin']]%>
 
 <div class="formtags"><%= label_tag(:brand, "Brand") %></div>
 <%= select_tag(:brand,options_for_select(brandname,[@chain]))%>
