--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -165,7 +165,7 @@ height: 6em;
 <%end%>
 
 
-
+ <%if current_user.present?%>
    <div class="wrapper">
 
 
@@ -175,6 +175,7 @@ height: 6em;
    <div class="push"></div>
 </div>
 </div>
+<%end%>
 
 <div class="footer">
 
