--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -162,6 +162,7 @@
 <div class="container-fluid">
 
 
+ <%if current_user.present?%>
 
     <%if (@hotelhash == nil || @check != nil) && @counter == 1 then%>
 
@@ -707,6 +708,10 @@
 </div>
 
 
+
+<%else%>
+This is a development site - Please login to continue
+<%end%>
 
 
 
