--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -164,6 +164,8 @@ height: 6em;
 </div>
 <%end%>
 
+
+ <%if current_user.present?%>
    <div class="wrapper">
 
 
@@ -173,7 +175,7 @@ height: 6em;
    <div class="push"></div>
 </div>
 </div>
-
+<%end%>
 
 <div class="footer">
 
