--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@ height: 6em;
 
 
 
-<script type="text/javascript" src="https://github.com/seiyria/bootstrap-slider/blob/master/js/bootstrap-slider.js"></script>
+<script type="text/javascript" src="http://seiyria.com/bootstrap-slider/js/bootstrap-slider.js"></script>
 
 <script src="http://bootstrapdocs.com/v2.0.3/docs/assets/js/bootstrap-carousel.js"></script>
 
@@ -174,7 +174,7 @@ height: 6em;
    <div class="push"></div>
 </div>
 </div>
-
+<%end%>
 
 <div class="footer">
 
