--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -300,10 +300,10 @@
 
 
 
-                  <div class="col-md-2 col-xs-12 col-sm-3 short_div">
+                  <div class="col-md-2 col-xs-12 col-sm-3 short_div" style="display: none;">
 
                     <label for = "temp"> Check-In Temperature</label>
-                    <select id="temp" class="form-control" name="temp" placeholder=".col-lg-4">
+                    <select id="temp" class="form-control" name="temp" placeholder=".col-lg-4" type="hidden">
 
                       <option>Any</option>
                       <option>90+</option>
