--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -1019,6 +1019,7 @@ type="hidden">
                                       <input value ="<%=@middleeast%>" name="@middleeast" id="@middleeast" type="hidden">
                                       <input value ="<%=@australia%>" name="@australia" id="@australia" type="hidden">
                                         <input value ="<%=@africa%>" name="@africa" id="@africa" type="hidden">
+                                           <input value ="<%=@city%>" name="@city" id="@city" type="hidden">
 
 
 
@@ -1091,7 +1092,7 @@ $("#filters").change();
     var peninsula = document.getElementById('peninsula').checked;
     var sorting = document.getElementById('sorting').value;
     var counter = document.getElementById('counter').value;
-
+var city = document.getElementById('city').value;
      var us = document.getElementById('us').checked;
     var canada = document.getElementById('canada').checked;
     var europe = document.getElementById('europe').checked;
@@ -1150,7 +1151,7 @@ var brandstring =[]
       type: 'POST',
       url: url,
       dataType:'script',
-      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula,coordarray:coordarray,centerlat:centerlat,centerlong:centerlong,sorting:sorting,counter:counter,regionstring:regionstring,us:us,canada:canada,europe:europe,africa:africa,australia:australia,asia:asia,middleeast:middleeast,latin:latin,southamerica:southamerica,city:city}
+      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula,coordarray:coordarray,centerlat:centerlat,centerlong:centerlong,sorting:sorting,counter:counter,regionstring:regionstring,us:us,canada:canada,europe:europe,africa:africa,australia:australia,asia:asia,middleeast:middleeast,latin:latin,southamerica:southamerica}
     });
 });
 
